# CMakeList.txt : CMake project for IntegerDifference, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable. No need for a header in this instance.
add_executable (IntegerDifference "IntegerDifference.cpp") # "IntegerDifference.h")

# TODO: Add tests and install targets if needed.
